--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Snake re-created using javascript",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "netlify-lambda build express"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/MartinPlusPlus/script-snake#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "netlify-lambda": "^2.0.3",
     "npm": "^7.8.0"
   }
 }
